fix long posts wrap add short form popup fix others profiles

--- a/src/app/(in)/layout.module.scss
+++ b/src/app/(in)/layout.module.scss
@@ -2,3 +2,7 @@
 	display: flex;
 	gap: 16px;
 }
+
+.main {
+	min-width: 0;
+}
